--- a/Jellyfin.Plugin.SharedWatchedStatus/Jellyfin.Plugin.SharedWatchedStatus.csproj
+++ b/Jellyfin.Plugin.SharedWatchedStatus/Jellyfin.Plugin.SharedWatchedStatus.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <RootNamespace>Jellyfin.Plugin.SharedWatchedStatus</RootNamespace>
+
     <TargetFramework>net5.0</TargetFramework>
 
     <Nullable>enable</Nullable>
