--- a/Jellyfin.Plugin.SharedWatchedStatus/Jellyfin.Plugin.SharedWatchedStatus.csproj
+++ b/Jellyfin.Plugin.SharedWatchedStatus/Jellyfin.Plugin.SharedWatchedStatus.csproj
@@ -6,6 +6,8 @@
     <RootNamespace>Jellyfin.Plugin.SharedWatchedStatus</RootNamespace>
 
     <TargetFramework>net5.0</TargetFramework>
+
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
   </PropertyGroup>
 
   <ItemGroup>
