--- a/Jellyfin.Plugin.SharedWatchedStatus/Jellyfin.Plugin.SharedWatchedStatus.csproj
+++ b/Jellyfin.Plugin.SharedWatchedStatus/Jellyfin.Plugin.SharedWatchedStatus.csproj
@@ -8,6 +8,7 @@
     <TargetFramework>net5.0</TargetFramework>
 
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <CodeAnalysisRuleSet>../jellyfin.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
