--- a/Jellyfin.Plugin.SharedWatchedStatus/Jellyfin.Plugin.SharedWatchedStatus.csproj
+++ b/Jellyfin.Plugin.SharedWatchedStatus/Jellyfin.Plugin.SharedWatchedStatus.csproj
@@ -7,6 +7,8 @@
 
     <TargetFramework>net5.0</TargetFramework>
 
+    <Nullable>enable</Nullable>
+
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <CodeAnalysisRuleSet>../jellyfin.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
