--- a/Jellyfin.Plugin.SharedWatchedStatus/Jellyfin.Plugin.SharedWatchedStatus.csproj
+++ b/Jellyfin.Plugin.SharedWatchedStatus/Jellyfin.Plugin.SharedWatchedStatus.csproj
@@ -14,6 +14,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Web\configuration.html" />
+    <None Remove="Web\configuration.js" />
+    <EmbeddedResource Include="Web\configuration.html" />
+    <EmbeddedResource Include="Web\configuration.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Jellyfin.Controller" Version="10.7.7" />
     <PackageReference Include="Jellyfin.Model" Version="10.7.7" />
   </ItemGroup>
