--- a/build.yaml
+++ b/build.yaml
@@ -6,7 +6,7 @@ targetAbi: "10.7.0.0"
 framework: "net5.0"
 overview: "Share the watched status between profiles"
 description: >
-  Share and synchronise the watched status between differen Jellyfin profiles.
+  Share and synchronise the watched status between different Jellyfin profiles.
 category: "General"
 owner: "Benedikt Magnus"
 artifacts:
